# sfml-playground

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug-report.md  missing-feature.md
chess-v1/: .gitignore  CMakeLists.txt
chess-v1/scripts/: convert-names.py
chess-v1/src/: main.cpp
chess-v1/src/Controller/: PieceViewRegistry.hpp
chess-v1/src/Data/: Constants.hpp  TextureStore.hpp
chess-v1/src/Model/: BishopMovePolicy.cpp  BoardPosition.hpp  Chessboard.cpp  KingMovePolicy.cpp  Move.hpp  MovePolicy.hpp  PawnMovePolicy.hpp  PieceKind.cpp  QueenMovePolicy.cpp  RookMovePolicy.hpp
chess-v1/src/View/: ChessboardView.cpp  ChessboardView.hpp  PieceView.hpp  PieceViewFactory.cpp  PieceViewFactory.hpp
chess-v2/: CMakeLists.txt  config.json
chess-v2/src/: Application.cpp  Application.h  BoardPosition.cpp  BoardPosition.h  Chessboard.cpp  Chessboard.h  Piece.cpp  Piece.h  PieceKind.h  main.cpp
chess-v2/src/config/: Config.cpp  Config.h  ConfigLoader.cpp  ConfigLoader.h
chess-v2/src/core/: CommonTypes.h  Constants.h  Tagged.cpp  Tagged.h
chess-v2/src/core/animation/: Animation.cpp  Animation.h  AnimationDriver.cpp  AnimationDriver.h  AnimationDriverVisitor.cpp  AnimationDriverVisitor.h  Interpolator.cpp  Interpolator.h  PositionAnimation.cpp  PositionAnimation.h  RotateAnimation.cpp  RotateAnimation.h
chess-v2/src/core/render/: RenderNode.cpp  RenderNode.h
chess-v2/src/core/scene/: Scene.cpp  Scene.h  ViewRegistry.cpp  ViewRegistry.h
chess-v2/src/core/view/: LayoutCommons.cpp  LayoutCommons.h  LayoutParams.cpp  LayoutParams.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h  ViewParent.cpp  ViewParent.h  ViewType.h  ViewUtils.cpp  ViewUtils.h
chess-v2/src/graphics/assets/: AssetsManager.cpp  AssetsManager.h  PieceImageDescriptor.cpp  PieceImageDescriptor.h
chess-v2/src/graphics/texture/: TextureManager.cpp  TextureManager.h
chess-v2/src/model/board/: BoardPosition.cpp  BoardPosition.h  Chessboard.cpp  Chessboard.h
chess-v2/src/model/piece/: Piece.cpp  Piece.h  PieceColor.cpp  PieceColor.h  PieceKind.cpp  PieceKind.h
src/: Chessboard.hpp  Controller.cpp  Controller.hpp  PieceKind.hpp  PlayerKind.cpp  PlayerKind.hpp  PlayerPieces.hpp  Resizable.hpp  TextureStore.hpp  chessboard.hpp  main.cpp
src/Controller/: Controller.cpp  Controller.hpp  PieceMovePolicyStore.cpp  PieceMovePolicyStore.hpp  PieceViewRegistry.cpp  PieceViewRegistry.hpp
src/Data/: Constants.hpp  TextureStore.hpp
src/Model/: BishopMovePolicy.cpp  BishopMovePolicy.hpp  BoardPosition.hpp  Chessboard.cpp  Chessboard.hpp  KingMovePolicy.cpp  KingMovePolicy.hpp  KnightMovePolicy.cpp  KnightMovePolicy.hpp  Move.hpp  MovePolicy.cpp  MovePolicy.hpp  PawnMovePolicy.cpp  PawnMovePolicy.hpp  Piece.cpp  Piece.hpp  QueenMovePolicy.cpp  QueenMovePolicy.hpp  RookMovePolicy.cpp
src/View/: Chessboard.cpp  Chessboard.hpp  ChessboardView.cpp  ChessboardView.hpp  PieceView.cpp  PieceView.hpp  PlayerPieces.hpp
